# poecdn-bundle-index

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
output/: urls.json
src/: main.rs
