[package]
name = "bundle-index"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde_json = "1"
url = "2.5.2"
reqwest = { version = "0.12.8", features = ["blocking"] }
oozextract = "0.2.0"
serde = { version = "1.0.210", features = ["derive"] }
murmurhash64 = "0.3.1"
sanitize-filename = "0.5.0"
base64 = "0.22.1"
csv = "1.3.0"
pathdiff = "0.2.2"
